# insight-query

./: .gitignore  pyproject.toml
src/: main.py
src/auth/: jwt.py  routes.py  schemas.py  services.py
src/db/: database.py  models.py  schema_fetcher.py
src/dependencies/: api_key.py  auth.py
src/llm/: query_llm.py
src/routes/: query_routes.py
src/services/: query_service.py
src/utils/: logger.py
