[project]
name = "insight-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "loguru>=0.7.3",
    "slowapi>=0.1.9",
]
